use local storage and add check on unicity in row, col and cell

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p>Solve easy sudoku puzzles with this interactive solver. Click on a cell to enter a number, and the solution will be
     displayed automatically.</p>
   <div id="sudoku"></div>
+  <button onclick="resetGame();">Reset</button>
 </body>
 
 </html>
